# linkedin-mcp-server

./: AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  btca.config.jsonc  docker-compose.yml  manifest.json  pyproject.toml  pytest.ini  skills-lock.json
.agents/skills/1-triage-issues/: SKILL.md
.agents/skills/2-repro-issue/: SKILL.md
.agents/skills/3-verify-pr-fix/: SKILL.md
.agents/skills/btca-local/: SKILL.md
.agents/skills/triage-reviews/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: check-attribution.yml  ci.yml  release.yml
docs/: adding-a-new-mcp-tool.md  docker-hub.md
linkedin_mcp_server/: __init__.py  bootstrap.py  cli_main.py  setup.py
linkedin_mcp_server/core/: __init__.py  auth.py
linkedin_mcp_server/scraping/: connection.py  extractor.py  link_metadata.py
linkedin_mcp_server/tools/: person.py
tests/: test_action_signals_dom.py  test_cli_main.py  test_scraping.py  test_setup.py  test_tools.py
